--- a/css/style.css
+++ b/css/style.css
@@ -3,6 +3,7 @@ body {
     color: #fff;
     background-color: #99ca27;
     font-family: 'Oxygen', sans-serif;
+    
   }
   #header-nav {
     background-color: rgb(69, 230, 36);
@@ -61,6 +62,11 @@ body {
   #nav-list a span {
     font-size: 1.8em;
   }
+  #collapsable-nav a:hover {
+    background-color: wheat;
+
+  }
+  
   
   #phone {
     margin-top: 5px;
@@ -69,10 +75,22 @@ body {
     text-align: right;
     padding-bottom: 0;
   }
+  
   #phone div { 
     color: #1b2849;
     text-align: right;
     padding-right: 15px;
+  }
+  #phone span{
+    width: 100px;
+    height: 15px;
+    color: black;
+  }
+  #phone a:hover{
+    background-color: wheat;
+  }
+  .deliver {
+    background-color: cornsilk;
   }
   
   .navbar-header button.navbar-toggle, .navbar-header .icon-bar {
@@ -88,10 +106,11 @@ body {
     opacity: .8;
     box-shadow: 0 0 50px #0f0a0d;
   }
-  .container .jumbotron {
+  .container .jumbotron  {
     box-shadow: 0 0 50px #3F0C1F;
     border: 2px solid #3F0C1F;
   }
+
   
   #menu-tile, #specials-tile, #map-tile {
     height: 250px;
@@ -99,6 +118,7 @@ body {
     margin-bottom: 15px;
     position: relative;
     border: 2px solid #3F0C1F;
+    box-shadow: 0 0 5px black;
     overflow: hidden;
   }
   #menu-tile:hover, #specials-tile:hover, #map-tile:hover {
@@ -146,6 +166,22 @@ body {
     height: 75px;
   
   }
+  .row {
+    padding: 25px;
+  }
+  #ch{
+    background: url('../img/chicken\ 65.jpg') no-repeat;
+    background-position: center;
+  }
+  #bf {
+    background: url('../img/beef\ fry.jfif') no-repeat;
+    background-position: center;
+  }
+  #sh {
+    background: url('../img/fish\ fry1.jfif') no-repeat;
+    background-position: center;
+  }
+ 
  
 @media (min-width: 1200px) {
     .container .jumbotron 
