--- a/css/stylem.css
+++ b/css/stylem.css
@@ -136,7 +136,7 @@ body {
     height: 150px;
   }
   #sh-tile {
-    background: url('../img/fish\ fry1.jfif') no-repeat;
+    background: url('../img/sushi\ 2.jfif') no-repeat;
     background-position: center;
     width: 300px;
     height: 150px;
